...
      [
        {
          text: "Cancel",
          //onPress: () => console.log("Cancel Pressed"),
          style: "cancel",
        },
        { text: "OK" },
      ],
      { cancelable: false }
    );

  const handleRegister = async () => {
    if (
      email === "" ||
      password === "" ||
      confirmPassword === "" ||
      name === ""
    ) {
      errMsg("Please ensure no fields are empty!");
    } else if (email.length < 10 || email.slice(-10) !== "@u.nus.edu") {
      errMsg("Please register with a valid NUS email!");
    } else if (password !== confirmPassword) {
      errMsg("Passwords do not match!");
    } else {
      try {
        await createUserWithEmailAndPassword(auth, email, password)
          .then(async (userCredentials) => {
            const user = userCredentials.user;
            const uid = user.uid;
...
          });
        }

        alert(
          "Verification email has been sent, please verify your email before logging in!"
        );
        navigation.navigate("Login");
        if (auth.currentUser && !auth.currentUser.emailVerified) {
          console.log("User is signed in, signing out...");
          auth.signOut();
        }
      } catch (error) {
        errMsg(error.message);
...

  return (
    <KeyboardAvoidingView style={styles.container} behavior="padding">
      <Image style={styles.image} source={require("../assets/icon.png")} />

      <Text style={styles.main}>
        <Text>Register</Text>
      </Text>

      <View style={styles.inputView}>
        <TextInput
          style={styles.inputText}
          onChangeText={(text) => setEmail(text)}
          value={email}
          placeholder="Enter your UserID@u.nus.edu"
          selectionColor="red"
        />
      </View>

      <View style={styles.inputView}>
        <TextInput
          style={styles.inputText}
          onChangeText={(text) => setName(text)}
          value={name}
          placeholder="Enter your name"
          selectionColor="red"
        />
      </View>

      <View style={styles.inputView}>
        <TextInput
          style={styles.passwordText}
          onChangeText={(text) => setPassword(text)}
          value={password}
          placeholder="Enter your password"
          secureTextEntry={securePassword}
          selectionColor="red"
        />
        <TouchableOpacity style={styles.passwordIcon} onPress={toggleSecurePassword}>
          <Feather name={securePassword ? "eye" : "eye-off"} size={24} color="grey" />
        </TouchableOpacity>
...

      <View style={styles.inputView}>
        <TextInput
          style={styles.passwordText}
          onChangeText={(text) => setConfirmPassword(text)}
          value={confirmPassword}
          placeholder="Confirm your password"
          secureTextEntry={secureConfirm}
          selectionColor="red"
        />
        <TouchableOpacity style={styles.passwordIcon} onPress={toggleSecureConfirm}>
          <Feather name={secureConfirm ? "eye" : "eye-off"} size={24} color="grey" />
        </TouchableOpacity>
...
