...
          if (
            // list of exluded email addresses to bypass email verification
            email !== "test_account@random.com" &&
            email !== "test_account2@random.com" &&
            !userCredential.user.emailVerified
          ) {
            Msg("", "Please verify your email before logging in!");
            auth.signOut();
          }
        })
        .catch((error) => {
          Msg("", error.message);
        });
...

  return (
    <KeyboardAvoidingView style={styles.container} behavior="padding">
      <Image style={styles.image} source={require("../assets/icon.png")} />

      <Text style={styles.main}>
        <Text>Log in</Text>
      </Text>

      <View style={styles.inputView}>
        <TextInput
          style={styles.inputText}
          onChangeText={(text) => setEmail(text)}
...
